# Libmacro-Legacy

./: .gitignore  .gitinclude  .vimrc  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE.txt  README.md  TODO  add.sh  author.sh  click.pri  commit.sh  common.pri  coverage.cmake  cpack.cmake  deployment.pri  deployqt.cmake  doxygen.cmake  envsetup.sh  git.cmake  gitk.sh  installs.pri  lib.pro  libmacro.astylerc  libmacro.c  libmacro.cmake  libmacro.pri  libmacro.pro  libmacro.rc.in  macro.c  macro.pro  macrolibrary.c  makefile  mktmp.sh  push.sh  style  template.cpp  template.h  template.sh  (+1 more)
app/: build.sh  macronsole.h  macronsole.pro  main.c
app/lnx/: lnxmacronsole.c
app/nativeless/: nomacronsole.c
app/win/: winmacronsole.c
backup/: cursordispatch.h  echodispatch.h  ihotkey.h  keydispatch.h  keymod.h  mods.h  screencrop.c  screencrop.h  scrolldispatch.h  signalmod.h  simplehotkey.h  stage.h  stagedhotkey.h
backup/inline/: cursordispatch.h  dispatch.h  echodispatch.h  hot.h  keydispatch.h  keymod.h  mods.h  scrolldispatch.h  signalmod.h  simplehotkey.h  stage.h  stagedhotkey.h
backup/intercept/: dispatcher.h  interceptor.c
backup/macro/: def.h  factory.c  macro.c  macro.h
backup/plugin/: command.c  command.h  comsignal.c  comsignal.h  def.h  keystring.c  keystring.h  screencrop.c  screencrop.h
backup/win/: screencrop.h  winscreencrop.cpp
backup/xml/: receiver.h  xml.c  xml.h
doxygen/: Doxyfile
extras/: alarm.cpp  command.cpp  extras.c  extras.cpp  extras.pro  macro_set.c  macroset.c  mod_extras.c  mod_extras.cpp  model.cpp  safe_string.c  safe_string.cpp  safestring.c  script.c  signal_extras.c  signal_extras.cpp  signal_option.c  signalextras.c  signaloption.c  string_key.cpp  wrap_signal.cpp  wrap_trigger.cpp
extras/lnx/: lnxextras.c  lnxsafestring.c  lnxsignalextras.c  nextras.c  nextras.cpp  nsafestring.c  nsafestring.cpp  nsignal_extras.cpp  nsignalextras.c  nsignalextras.cpp
extras/nativeless/: nextras.c  nsafestring.c
extras/none/: nextras.cpp  nsignal_extras.cpp
extras/ssl/: nsafe_string.cpp
extras/win/: nextras.c  nextras.cpp  nsafestring.c  nsafestring.cpp  nsignal_extras.cpp  nsignalextras.c  nsignalextras.cpp  winextras.c  winsafestring.c  winsignalextras.c
hotkey/: cursordispatch.c  dispatch.c  dispatcher.cpp  dispatchstandard.c  echodispatch.c  grab_devices  grabber.cpp  hook.cpp  hot.c  hotkey.c  hotkey.cpp  hotkeyinitializer.cpp  hotkeystage.c  hotstaged.c  hotstandard.c  keydispatch.c  keyintercept.cpp  lnxdispatcher.hxx  lnxgrabber.hxx  mods.c  scrolldispatch.c  signalmod.c  simplehotkey.c  spaceintercept.cpp  stage.c  stagedhotkey.c  stagedhotkey.cpp  windispatcher.hxx
hotkey/lnx/: lnxkeymod.cpp  lnxmods.c
hotkey/nativeless/: nomods.cpp
hotkey/win/: winkeymod.cpp  winmods.c
include/: macro.h  rapidxml_l
include/extras/: def.h  extras.h  macroset.h  safestring.h  script.h  signalextras.h  signaloption.h
include/factory/: hotkeyfactory.cpp  signalfactory.cpp  signalfactory.h
include/hotkey/: def.h  dispatch.h  dispatcher.h  dispatchstandard.h  dispatchutils.h  grabber.h  hook.h  hot.h  hotkey.h  hotstaged.h  hotstandard.h  iintercept.h  keyintercept.h  mods.h  spaceintercept.h  stage.h
include/intercept/: def.h  intercept.h
include/lnx/: macro.h
include/macro/: def.h  macro.h
include/nativeless/: macro.h
include/signal/: comsignal.h  def.h  device.h  isignal.h  keysignal.h  keystring.h  mods.h  noop.h  scriptsignal.h  signal.h  spacesignal.h  standard.h
include/util/: array.h  def.h  funstrings.h  interface.h  map.h  mcrstrings.h  object.h  priv.h  serial.h  threads.h  util.h  xml.h
include/win/: macro.h
intercept/: intercept.c  mod_intercept.c
intercept/lnx/: lnxgrabber.c  lnxintercept.c  ngrabber.c  nintercept.c
intercept/win/: ngrabber.c  nintercept.c  wingrabber.c  winintercept.c
lib/: macrolibrary.pro  mk.sh
macro/: itrigger.c  libmacro.c  macro.c  macro.cpp  macro.pro  mod_macro.c  trigger.c
macro/intercept/: intercept.c  mod_intercept.c
macro/macro/: itrigger.c  macro.c  mod_macro.c  trigger.c
macro/signal/: dispatch_pair.c  dispatcher.c  generic_dispatcher.c  isignal.c  mod_flags.c  mod_signal.c  modifiers.c  signal.c
macro/standard/: action.c  alarm.c  alarmpp.cpp  hid_echo.c  key.c  mod_standard.c  mods.c  move_cursor.c  noop.c  scroll.c  stage.c  staged.c  standard.c
macro/util/: array.c  cppthread.cpp  error.c  instance.c  interface.c  map.c  mcrstring.c  registry.c  string_index.c  string_set.c  util.c
mcr/: err.h  extras.h  libmacro.h  modules.h  private.h  warn.h
mcr/extras/: alarm.h  command.h  def.h  extras.h  extras.hpp  idata.h  iinterrupt.h  interrupt.h  iserializer.h  isignal.h  isignal_data.h  itrigger_data.h  macro_set.h  macros_interrupted.h  mod_extras.h  mod_extras.hpp  std.h  (+15 more)
project/: macro.pro  macrolibrary.pro
signal/: comsignal.cpp  device.cpp  dispatch_map.c  dispatch_pair.c  dispatcher.c  isignal.c  isignal.cpp  keysignal.cpp  keystring.cpp  lnxdevice.hxx  lnxkeysignal.hxx  lnxkeystring.hxx  lnxmods.hxx  lnxspacesignal.hxx  mod_flags.c  mod_signal.c  mods.cpp  noop.cpp  scriptsignal.cpp  signal.c  signal.cpp  signalreg.c  spaceposition.cpp  spacesignal.cpp  standard.c  standardnames.c  winkeysignal.hxx  winkeystring.hxx  winmods.hxx  winspacesignal.hxx
src/: libmacro.c
standard/: action.c  alarm.c  alarmpp.cpp  hid_echo.c  key.c  mod_standard.c  mods.c  move_cursor.c  noop.c  scroll.c  stage.c  staged.c  standard.c
test/: main.cpp  test.pro  tlibmacro.cpp  tlibmacro.h
tests/: arraytest.c  buildall.sh  cmdtest.c  crypttest.c  dispatchstandardtest.c  dispatchtest.c  extras.sh  grabtest.c  hotkey.sh  hotkeytest.cpp  hotstagedtest.c  hottest.c  intercept.sh  maptest.c  modstest.c  sendtest.c  sendtest.cpp  signal.sh  signaltest.c  signaltest.cpp  stagetest.c  standardtest.c  test.pro  util.sh  utiltest.cpp
util/: array.c  bimap.c  error.c  funstrings.cpp  instance.c  interface.c  map.c  mcrstring.c  mcrstrings.c  name_bimap.c  name_map.c  registry.c  serial.cpp  string_index.c  string_map.c  string_set.c  threads.cpp  util.c  util.cpp  xml.cpp
(+290 files in other folders)
